--- a/week4,5/demo/style.css
+++ b/week4,5/demo/style.css
@@ -110,15 +110,12 @@ section .button:hover {
 .services .container {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
   flex-wrap: wrap;
-  margin-left: 40px;
-  margin-right: 40px;
-  padding: 2px;
+  justify-content: center;
 }
 .services .container .card {
-  margin-left: 42px;
-  flex: 0 1 25rem;
+  margin: 0 3rem;
+  flex: 0 1 20rem;
   box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
   border: 0.1rem solid rgba(0, 0, 0, 0.1);
@@ -132,18 +129,21 @@ section .button:hover {
 }
 .services .container .card .buttn {
   display: inline-block;
+  align-items: center;
   font-size: 16px;
   margin-top: 20px;
   margin-left: 40%;
+  margin-top: 10px;
   padding: 15px 20px;
   background-color: green;
   border-radius: 4px;
   color: white;
 }
-.services .container .card .card:hover {
-  border: 0.1rem solid rgba(11, 22, 233, 0.82);
-}
 .services .container .card .buttn:hover {
+  transform: scale(1.1);
+}
+.services .container .card:hover {
+  border: 0.1rem solid grey;
   transform: scale(1.1);
 }
 
