--- a/week4,5/demo/style.scss
+++ b/week4,5/demo/style.scss
@@ -2,254 +2,238 @@ $background-color: white;
 $text-color: black;
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    text-decoration: none;
-    scroll-behavior: smooth;
-    list-style-type: none;
-   
-
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  text-decoration: none;
+  scroll-behavior: smooth;
+  list-style-type: none;
 }
 
 body {
-    background-color: $background-color;
-    color: $text-color;
+  background-color: $background-color;
+  color: $text-color;
 }
 
 header {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: transparent;
+  padding: 20px 10px;
+
+  .btn {
+    color: $text-color;
+    font-size: 35px;
     z-index: 1;
+    cursor: pointer;
+    display: none;
+  }
+
+  .logo {
+    margin-left: 0px;
+    font-size: 35px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    color: white;
+  }
+
+  .links {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background: transparent;
-    padding: 20px 10px;
 
-    .btn {
-        color: $text-color;
-        font-size: 35px;
-        z-index: 1;
-        cursor: pointer;
-        display: none;
+    a {
+      color: white;
+      font-size: 20px;
+      font-weight: 500;
+      padding: 10px 30px;
+      border-radius: 4px;
     }
 
-    .logo {
-        margin-left: 0px;
-        font-size: 35px;
-        font-weight: 500;
-        letter-spacing: 1px;
-        color: white;
+    a:hover {
+      color: orangered;
+      background-color: rgb(236, 230, 229);
+      box-shadow: 3px 3px 1px rgb(197, 194, 194);
+      border-radius: 4px;
     }
-
-    .links {
-        display: flex;
-       
-
-
-        a {
-            color: white;
-            font-size: 20px;
-            font-weight: 500;
-            padding: 10px 30px;
-            border-radius: 4px;
-           
-        }
-
-        a:hover {
-            color: orangered;
-            background-color: rgb(236, 230, 229);
-            box-shadow: 3px 3px 1px rgb(197, 194, 194);
-            border-radius: 4px;
-
-        }
-    }
+  }
 }
 
 section {
-    padding: 70px 5%;
-    position: relative;
-    width: 100%;
-    height: 90vh;
-    background-image: url('https://images.unsplash.com/photo-1579548122080-c35fd6820ecb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8dGVjaG5vbG9neSUyMGJhY2tncm91bmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
-    background-size: cover;
-    background-position: center;
-    display: grid;
-    align-items: center;
+  padding: 70px 5%;
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  background-image: url("https://images.unsplash.com/photo-1579548122080-c35fd6820ecb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8dGVjaG5vbG9neSUyMGJhY2tncm91bmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  align-items: center;
 
-    .home-text h1 {
-        font-size: 35px;
-        line-height: 1.2;
-        color: white;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
+  .home-text h1 {
+    font-size: 35px;
+    line-height: 1.2;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
 
-    p {
-        color: aliceblue;
-        font-size: 20px;
-        font-weight: 400;
-        line-height: 38px;
+  p {
+    color: aliceblue;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 38px;
+  }
 
-    }
+  .button {
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 20px;
+    padding: 15px 30px;
+    background-color: #ffffffbf;
+    border-radius: 4px;
+  }
 
-    .button {
-        display: inline-block;
-        font-size: 16px;
-        margin-top: 20px;
-        padding: 15px 30px;
-        background-color: #ffffffbf;
-        border-radius: 4px;
-    }
-
-    .button:hover {
-        color: orangered;
-        transform: scale(1.1);
-    }
+  .button:hover {
+    color: orangered;
+    transform: scale(1.1);
+  }
 }
 
 .about {
-    background-color: rgb(253, 253, 253);
+  background-color: rgb(253, 253, 253);
 
-    h1 {
-        padding-top: 30px;
-        text-align: center;
-        font-size: 35px;
-        font-weight: 500;
-    }
+  h1 {
+    padding-top: 30px;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 500;
+  }
 
-    p {
-        padding: 80px;
-        font-size: 20px;
-        line-height: 1.5;
-    }
+  p {
+    padding: 80px;
+    font-size: 20px;
+    line-height: 1.5;
+  }
 }
 
 .services {
+  .container {
+    display: flex;
+    flex-direction: row;
+    // gap: 2rem;
+    flex-wrap: wrap;
+     justify-content: center;
+    
 
-    .container {
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
-        flex-wrap: wrap;
-        margin-left: 40px;
-        margin-right: 40px;
-        padding: 2px;
+    .card {
+      margin:0 3rem;
+      flex: 0 1 20rem;
+      box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
+      border-radius: 0.5rem;
+      border: 0.1rem solid rgba(0, 0, 0, 0.1);
+      position: relative;
 
-        .card {
-            margin-left: 42px;
-            flex: 0 1 25rem;
-            box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
-            border-radius: 0.5rem;
-            border: 0.1rem solid rgba(0, 0, 0, 0.1);
-            position: relative;
-          
+      img {
+        position: relative;
+        text-align: center;
+        padding-top: 2rem;
+        overflow: hidden;
+      }
 
-            img {
-                position: relative;
-                text-align: center;
-                padding-top: 2rem;
-                overflow: hidden;
-
-            }
-
-            .buttn {
-                display: inline-block;
-                font-size: 16px;
-                margin-top: 20px;
-                margin-left: 40%;
-                padding: 15px 20px;
-                background-color: green;
-                border-radius: 4px;
-                color: white;
-
-            }
-            .card:hover{
-                border: 0.1rem solid rgba(11, 22, 233, 0.82);  
-            }
-
-            .buttn:hover {
-
-                transform: scale(1.1);
-
-            }
-
-
-        }
-
+      .buttn {
+        
+        display: inline-block;
+        align-items: center;
+        font-size: 16px;
+        margin-top: 20px;
+        margin-left: 40%;
+        margin-top: 10px;
+        padding: 15px 20px;
+        background-color: green;
+        border-radius: 4px;
+        color: white;
+      }
+     .buttn:hover {
+        transform: scale(1.1);
+      }
     }
+    .card:hover {
+        border: 0.1rem solid grey;
+        transform: scale(1.1);
+      }
+  }
 }
 
 .contact {
-    .row {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem;
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
 
-        form {
-            flex: 1 1 40rem;
-            padding: 1rem 1rem;
-            box-shadow: 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
-            border: 1rem solid rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 0.5rem;
-            align-items: center;;
+    form {
+      flex: 1 1 40rem;
+      padding: 1rem 1rem;
+      box-shadow: 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
+      border: 1rem solid rgba(0, 0, 0, 0.1);
+      background-color: white;
+      border-radius: 0.5rem;
+      align-items: center;
 
-            .box {
-                padding: 0.5rem;
-                width:100%;
-                font-size: 1.2rem;
-                color: black;
-                border: 0.1rem solid rgba(0, 0, 0, 0.1);
-                border-radius: 0.5rem;
-                margin: 0.7rem 0;
-            }
-            .btn{
-                background-color: green;
-                border-radius: 1rem;
-                padding:0.9rem;
-                font-weight: 200;
-                font-size:19px;
-            }
-        }
-
-        image {
-            flex: 1 1 40rem;
-
-            .img {
-                width: 100%;
-            }
-        }
+      .box {
+        padding: 0.5rem;
+        width: 100%;
+        font-size: 1.2rem;
+        color: black;
+        border: 0.1rem solid rgba(0, 0, 0, 0.1);
+        border-radius: 0.5rem;
+        margin: 0.7rem 0;
+      }
+      .btn {
+        background-color: green;
+        border-radius: 1rem;
+        padding: 0.9rem;
+        font-weight: 200;
+        font-size: 19px;
+      }
     }
+
+    image {
+      flex: 1 1 40rem;
+
+      .img {
+        width: 100%;
+      }
+    }
+  }
 }
-@media only screen and (max-width:1400px){
-    header{
-        padding: 35px 3%;
-    }
-    section{
-        padding: 100px 3%;
-        ;
-
-    }
+@media only screen and (max-width: 1400px) {
+  header {
+    padding: 35px 3%;
+  }
+  section {
+    padding: 100px 3%;
+  }
 }
-@media only screen and (max-width:1040px){
-   header{
-    .btn{
-        display:block;
+@media only screen and (max-width: 1040px) {
+  header {
+    .btn {
+      display: block;
     }
-    .links{
-        position:absolute;
-        top:0;
-        right:0;
-        width:270px;
-        height:120vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 15px 30px;
+    .links {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 270px;
+      height: 120vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 15px 30px;
     }
-   } 
+  }
 }
